[package]
name = "node-template"
version = "3.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", features = ["wasmtime"] }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", features = ["wasmtime"] }
sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", features = ["wasmtime"] }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-consensus-aura = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-consensus-aura = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-finality-grandpa = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-finality-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-rpc-api = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-basic-authorship = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
substrate-frame-rpc-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "3.1.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
frame-benchmarking-cli = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }

node-template-runtime = { version = "3.0.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
