[package]
authors = ["Fantour Developers"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2018"
license = "Unlicense"
name = "pallet-exchange"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# external dependencies
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = "3.1.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
frame-support = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
frame-system = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
pallet-balances = {  default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8"  }
orml-traits = { default-features = false, version = "0.4.1-dev", path = "../traits"  }

[dev-dependencies]
serde = "1.0.119"
sp-core = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-io = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-runtime = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }

# orml dependencies
orml-currencies = { default-features = false, version = "0.4.1-dev", path = "../currencies" }
orml-tokens = { default-features = false, version = "0.4.1-dev", path = "../tokens" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
    "pallet-balances/std",

    "orml-traits/std",
    "orml-currencies/std",
    "orml-tokens/std",
]
try-runtime = ["frame-support/try-runtime"]
